--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-vault-js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Pure Javascript Vault Client",
   "main": "vault.js",
   "author": "Erik Kristensen <erik@erikkristensen.com>",
@@ -9,6 +9,7 @@
   "dependencies": {
     "debug": "^2.2.0",
     "mustache": "^2.1.3",
-    "request": "^2.60.0"
+    "request": "^2.60.0",
+    "xtend": "^4.0.0"
   }
 }
